--- a/mod/ksd/localization/simp_chinese/spouse_designer_localisation_l_simp_chinese.yml
+++ b/mod/ksd/localization/simp_chinese/spouse_designer_localisation_l_simp_chinese.yml
@@ -1,16 +1,21 @@
 ﻿l_simp_chinese:
-unlanded_female:1 " "
-unlanded_male:1 " "
-unlanded:1 " "
-SPOUSE_DESIGNER_SPOUSE:1 "配偶"
-SPOUSE_DESIGNER_PARENTS:1 "父母："
-SPOUSE_DESIGNER_CHILDREN:1 "儿童："
-SPOUSE_DESIGNER_CHILDREN_desc:1 "出于技术原因，只能显示与该角色或他当前配偶同一家族的孩子。："
-SPOUSE_DESIGNER_ADD_CHILDREN:1 "添加孩子"
-SPOUSE_DESIGNER_EDIT_FAMILY:1 "编辑家庭"
-SPOUSE_DESIGNER_ADD_SPOUSE:1 "添加配偶"
-SPOUSE_DESIGNER_DIVORCE:1 "离婚"
-SPOUSE_DESIGNER_MATRILINEAR_MARRIAGE:1 "母系婚姻"
-SPOUSE_DESIGNER_MATRILINEAR_MARRIAGE_desc:1 "如果勾选，则为母系婚姻。"
-SPOUSE_DESIGNER_OPEN:1 "开放配偶设计师" 
-RULER_DESIGNER_FULL_UNLANDED_NAME:2 "[RulerDesignerWindow.GetTitleTierName] #high [RulerDesignerWindow.GetFirstName] [RulerDesignerWindow.GetDynastyName]#!"
+ unlanded_female:1 " "
+ unlanded_male:1 " "
+ unlanded:1 " "
+ SPOUSE_DESIGNER_SPOUSE:1 "配偶"
+ SPOUSE_DESIGNER_PARENTS:1 "父母："
+ SPOUSE_DESIGNER_CHILDREN:1 "儿童："
+ SPOUSE_DESIGNER_CHILDREN_desc:1 "出于技术原因，只能显示与该角色或他当前配偶同一家族的孩子。："
+ SPOUSE_DESIGNER_ADD_CHILDREN:1 "添加孩子"
+ SPOUSE_DESIGNER_EDIT_FAMILY:1 "编辑家庭"
+ SPOUSE_DESIGNER_VIEW_FAMILY:1 "查看家庭"
+ SPOUSE_DESIGNER_ADD_SPOUSE:1 "添加配偶"
+ SPOUSE_DESIGNER_DIVORCE:1 "离婚"
+ SPOUSE_DESIGNER_MATRILINEAR_MARRIAGE:1 "母系婚姻"
+ SPOUSE_DESIGNER_MATRILINEAR_MARRIAGE_desc:1 "如果勾选，则为母系婚姻。"
+ SPOUSE_DESIGNER_OPEN:1 "打开 配偶编辑器"
+ RULER_DESIGNER_FULL_UNLANDED_NAME:3 " #high [RulerDesignerWindow.GetFirstName] [RulerDesignerWindow.GetDynastyName]#!"
+ SPOUSE_DESIGNER_FAMILY_TITLE_NAME:0 "[placeholder_source_title.GetNameNoTierNoTooltip] 的家庭"
+ SPOUSE_DESIGNER_EDIT:1 "编辑"
+ SPOUSE_DESIGNER_REMOVE:1 "移除"
+ SPOUSE_DESIGNER_FAMILY:1 "家庭关系"
