Added Submod Stuff + Updated for 1.9.2
Added necessary functionality for
Nudity Toggle
+
Necessary event hook for Special Gene Traits Comppatch.

Backwards compatible to 1.9.0 (but no further)

--- a/mod/ksd/localization/english/spouse_designer_localisation_l_english.yml
+++ b/mod/ksd/localization/english/spouse_designer_localisation_l_english.yml
@@ -5,7 +5,7 @@ unlanded:1 " "
 SPOUSE_DESIGNER_SPOUSE:1 "Spouse"
 SPOUSE_DESIGNER_PARENTS:1 "Parents:"
 SPOUSE_DESIGNER_CHILDREN:1 "Children:"
-SPOUSE_DESIGNER_CHILDREN_desc:1 "Only children of the same house as this character or his current spouse can be displayed for technical reasons.:"
+SPOUSE_DESIGNER_CHILDREN_desc:1 "All children of the character are displayed:"
 SPOUSE_DESIGNER_ADD_CHILDREN:1 "Add Children"
 SPOUSE_DESIGNER_EDIT_FAMILY:1 "Edit Family"
 SPOUSE_DESIGNER_VIEW_FAMILY:1 "View Family"
@@ -19,3 +19,5 @@ SPOUSE_DESIGNER_FAMILY_TITLE_NAME:0 "[placeholder_source_title.GetNameNoTierNoTo
 SPOUSE_DESIGNER_EDIT:1 "Edit"
 SPOUSE_DESIGNER_REMOVE:1 "Remove"
 SPOUSE_DESIGNER_FAMILY:1 "Family"
+SPOUSE_DESIGNER_SHOW_NAKED:0 "Naked"
+SPOUSE_DESIGNER_SHOW_NAKED_desc:0 ""Shows Character Naked (As per $tenet_natural_primitivism_name$ etc)""
