--- a/mod/ksd/localization/korean/spouse_designer_localisation_l_korean.yml
+++ b/mod/ksd/localization/korean/spouse_designer_localisation_l_korean.yml
@@ -3,14 +3,21 @@ unlanded_female:1 " "
 unlanded_male:1 " "
 unlanded:1 " "
 SPOUSE_DESIGNER_SPOUSE:1 "배우자"
-SPOUSE_DESIGNER_PARENTS:1 "부모님:"
-SPOUSE_DESIGNER_CHILDREN:1 "어린이:"
-SPOUSE_DESIGNER_CHILDREN_desc:1 "기술적인 이유로 이 캐릭터 또는 현재 배우자와 같은 집의 자녀만 표시할 수 있습니다.:"
+SPOUSE_DESIGNER_PARENTS:1 "부모:"
+SPOUSE_DESIGNER_CHILDREN:1 "자녀:"
+SPOUSE_DESIGNER_CHILDREN_desc:1 "해당 인물의 모든 자녀가 표시됨"
 SPOUSE_DESIGNER_ADD_CHILDREN:1 "자녀 추가"
 SPOUSE_DESIGNER_EDIT_FAMILY:1 "가족 편집"
+SPOUSE_DESIGNER_VIEW_FAMILY:1 "가족 보기"
 SPOUSE_DESIGNER_ADD_SPOUSE:1 "배우자 추가"
 SPOUSE_DESIGNER_DIVORCE:1 "이혼"
-SPOUSE_DESIGNER_MATRILINEAR_MARRIAGE:1 "부부 결혼"
-SPOUSE_DESIGNER_MATRILINEAR_MARRIAGE_desc:1 "선택하면 모계 결혼입니다."
-SPOUSE_DESIGNER_OPEN:1 "배우자 디자이너 열기" 
-RULER_DESIGNER_FULL_UNLANDED_NAME:2 "[RulerDesignerWindow.GetTitleTierName] #high [RulerDesignerWindow.GetFirstName] [RulerDesignerWindow.GetDynastyName]#!"
+SPOUSE_DESIGNER_MATRILINEAR_MARRIAGE:1 "모계 결혼"
+SPOUSE_DESIGNER_MATRILINEAR_MARRIAGE_desc:1 "체크 시 모계 결혼으로 취급"
+SPOUSE_DESIGNER_OPEN:1 "배우자 디자이너 열기"
+RULER_DESIGNER_FULL_UNLANDED_NAME:3 "#high [RulerDesignerWindow.GetFirstName] [RulerDesignerWindow.GetDynastyName]#!"
+SPOUSE_DESIGNER_FAMILY_TITLE_NAME:0 "[placeholder_source_title.GetNameNoTierNoTooltip] Family"
+SPOUSE_DESIGNER_EDIT:1 "편집"
+SPOUSE_DESIGNER_REMOVE:1 "제거"
+SPOUSE_DESIGNER_FAMILY:1 "가족"
+SPOUSE_DESIGNER_SHOW_NAKED:0 "나체 보기"
+SPOUSE_DESIGNER_SHOW_NAKED_desc:0 ""인물의 나체 모습을 보여줌 ($tenet_natural_primitivism_name$ 등과 같이)""
