--- a/mod/ksd/localization/english/spouse_designer_localisation_l_english.yml
+++ b/mod/ksd/localization/english/spouse_designer_localisation_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
-unlanded_female:1 " "
-unlanded_male:1 " "
-unlanded:1 " "
+#unlanded_female:1 " "
+#unlanded_male:1 " "
+#unlanded:1 " "
 SPOUSE_DESIGNER_SPOUSE:1 "Spouse"
 SPOUSE_DESIGNER_PARENTS:1 "Parents:"
 SPOUSE_DESIGNER_CHILDREN:1 "Children:"
@@ -13,7 +13,7 @@ SPOUSE_DESIGNER_ADD_SPOUSE:1 "Add Spouse"
 SPOUSE_DESIGNER_DIVORCE:1 "Divorce"
 SPOUSE_DESIGNER_MATRILINEAR_MARRIAGE:1 "Matrilinear Marriage"
 SPOUSE_DESIGNER_MATRILINEAR_MARRIAGE_desc:1 "If checked, it is a matrilineal marriage."
-SPOUSE_DESIGNER_OPEN:1 "Open Spouse Designer"
+SPOUSE_DESIGNER_OPEN:2 "Create your own Spouse"
 RULER_DESIGNER_FULL_UNLANDED_NAME:3 "#high [RulerDesignerWindow.GetFirstName] [RulerDesignerWindow.GetDynastyName]#!"
 SPOUSE_DESIGNER_FAMILY_TITLE_NAME:0 "[placeholder_source_title.GetNameNoTierNoTooltip] Family"
 SPOUSE_DESIGNER_EDIT:1 "Edit"
@@ -21,3 +21,7 @@ SPOUSE_DESIGNER_REMOVE:1 "Remove"
 SPOUSE_DESIGNER_FAMILY:1 "Family"
 SPOUSE_DESIGNER_SHOW_NAKED:0 "Naked"
 SPOUSE_DESIGNER_SHOW_NAKED_desc:0 ""Shows Character Naked (As per $tenet_natural_primitivism_name$ etc)""
+SPOUSE_DESIGNER_DESIGN_SPOUSE:0 "$SPOUSE_DESIGNER_OPEN$"
+SPOUSE_DESIGNER_EDIT_SPOUSE:0 "$SPOUSE_DESIGNER_EDIT$"
+CANNOT_EDIT_LANDLESS_NOBLE_FAMILY:0 "Cannot edit a landless Noble Family Head."
+NOT_SPOUSE_DESIGNER_ADD_CHILDREN:1 "$SPOUSE_DESIGNER_ADD_CHILDREN$"
